# nordpool-spotprices

./: pyproject.toml  pyrightconfig.json
spotprices/: spotprices.py
tests/: test_spotprices.py
