[tool.poetry]
name = "spotprices"
version = "0.1.0"
description = ""
authors = ["Rune Lausen <rune@lausennet.dk>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "v2.27.1"
colorama = "^0.4"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
